name:                snowdrift-ci-test
version:             0.1.0.0
license:             BSD3
license-file:        LICENSE
author:              Nikita Karetnikov
maintainer:          nikita@karetnikov.org
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable snowdrift-ci-test
  main-is:             Main.hs
  build-depends:       base >=4.8 && <4.9
  hs-source-dirs:      src

test-suite test
  default-language:    Haskell2010
  type:                exitcode-stdio-1.0
  main-is:             Test.hs
  hs-source-dirs:      tests
  build-depends:       base
  default-language:    Haskell2010
